--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="done_button">Done Button</string>
     <string name="subtitle">Subtitle</string>
     <string name="type_note_here">Type note here...</string>
+    <string name="miscellaneous">Miscellaneous</string>
+    <string name="default_color">Default Color</string>
+    <string name="pick_color">Pick Color</string>
 </resources>
