--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">NotHut</string>
-    <string name="header_nothut">NotHut</string>
+    <string name="app_name">NoteHut</string>
+    <string name="header_nothut">NoteHut</string>
     <string name="txt_search_your_notes">Search notes</string>
     <string name="search_icon">Search Icon</string>
     <string name="add_note_icon">Add Note Icon</string>
