--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="delete_image">Delete Image</string>
     <string name="delete_image_icon">Delete Image Icon</string>
     <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
+    <string name="task_list">Task List</string>
+    <string name="notes">Notes</string>
 </resources>
