--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
     <string name="task_list">Task List</string>
     <string name="notes">Notes</string>
+    <string name="are_you_sure_you_want_to_exit_without_saving_note">Are you sure you want to exit without saving note?</string>
 </resources>
